--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -16,7 +16,8 @@
 	},
 	"dependencies": {
 		"bits-ui": "^0.21.13",
-		"pocketbase": "^0.21.5"
+		"pocketbase": "^0.21.5",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
