--- a/sveltekit/Dockerfile
+++ b/sveltekit/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS builder
+FROM node:20-alpine
 
 WORKDIR /app
 
@@ -8,18 +8,6 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-
-FROM node:18-alpine AS runner
-
-WORKDIR /app
-
-COPY --from=builder /app/build ./
-
-COPY --from=builder /app/node_modules ./node_modules
-
 EXPOSE 3000
 
-ENV NODE_ENV=production
-
-CMD ["node", "--env-file .env", "build"]
+CMD ["sh", "-c", "npm run build && node --env-file=.env build"]
