--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
-      # - --entrypoints.web.http.redirections.entryPoint.to=websecure # Редирект HTTP на HTTPS
+      # - --entrypoints.web.http.redirections.entryPoint.to=websecure
       # - --entrypoints.websecure.http.tls=true
     ports:
       - "80:80"
@@ -49,25 +49,28 @@ services:
     restart: always
     labels:
       - "traefik.enable=true"
+      # - "traefik.http.routers.backend.rule=Host(`admin.aielts.ru`)"
       - "traefik.http.routers.backend.rule=Host(`admin.localhost`)"
       - "traefik.http.routers.backend.entrypoints=web"
-      # - "traefik.http.services.backend.loadbalancer.server.port=8090"
 
   web:
     build: ./sveltekit
     container_name: aielts_sveltekit
     networks:
       - local
-    env_file: "sveltekit/.env"
+    environment:
+      - ORIGIN=http://localhost
+      # - ORIGIN=http://aielts.ru
+    env_file: "sveltekit/.env.production"
     restart: always
     depends_on:
       - backend
       - cache
     labels:
       - "traefik.enable=true"
+      # - "traefik.http.routers.web.rule=Host(`aielts.ru`)"
       - "traefik.http.routers.web.rule=Host(`localhost`)"
       - "traefik.http.routers.web.entrypoints=web"
-      # - "traefik.http.services.web.loadbalancer.server.port=3000"
 
 volumes:
   pocketbase_data:
