--- a/sveltekit/Dockerfile
+++ b/sveltekit/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:20-alpine
+FROM node:20
+
+RUN apt update && apt-get install -y bash
 
 WORKDIR /app
 
@@ -10,4 +12,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["sh", "-c", "npm run build && node --env-file=.env build"]
+CMD ["sh", "-c", "npm run build && node --env-file=.env.production build"]
