--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -1,4 +1,5 @@
 {
+	"type": "module",
 	"name": "sveltekit",
 	"version": "0.0.1",
 	"private": true,
@@ -16,6 +17,8 @@
 	},
 	"dependencies": {
 		"bits-ui": "^0.21.13",
+		"cors": "^2.8.5",
+		"express": "^4.20.0",
 		"pocketbase": "^0.21.5",
 		"redis": "^4.7.0",
 		"zod": "^3.23.8"
@@ -42,10 +45,10 @@
 		"svelte-check": "^3.6.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "^3.4.10",
-		"typescript": "^5.0.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
-	},
-	"type": "module"
+	}
 }
