--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -19,6 +19,7 @@
 		"bits-ui": "^0.21.13",
 		"cors": "^2.8.5",
 		"express": "^4.20.0",
+		"langchain": "^0.3.2",
 		"pocketbase": "^0.21.5",
 		"redis": "^4.7.0",
 		"zod": "^3.23.8"
